fix: flex gap error

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -571,6 +571,12 @@ footer {
 
     .group {
       gap: 5px;
+
+      ul {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+      }
     }
 
     ul {
